--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </a>
             </div>
             <div class="proj-box">
-            <a href="https://github.com/ananya8117/Escape_Login" target="_blank" class="proj-inner">
+            <a href="https://ananya8117.github.io/Escape_Login/" target="_blank" class="proj-inner">
                 <i class='bx bxs-lock'></i> Escape Login
             </a>
             </div>
@@ -188,7 +188,7 @@
             </a>
             </div>
             <div class="proj-box">
-            <a href="https://github.com/ananya8117/PickMe" target="_blank" class="proj-inner">
+            <a href="https://ananya8117.github.io/PickMe/" target="_blank" class="proj-inner">
                 <i class='bx bxs-joystick'></i> PickMe
             </a>
             </div>
